# shortlist

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DATA_CONTRACT.md  README.md  config.example.yaml  docker-compose.yml  experience.example.md  main.py  pyproject.toml  shortlist
.github/workflows/: ci.yml
agents/: cover.py  finder.py  networker.py  reviewer.py  scorer.py  tailor.py
coordinator/: review.py
flows/: audit.py  pipeline.py  proactive.py  reactive.py  status.py
prompts/: cover.md  networker.md  reviewer.md  scorer.md  tailor.md
scripts/: backup.sh  restore.sh
tests/: test_config.py  test_coordinator.py  test_corpus.py  test_cover.py  test_finder.py  test_flows.py  test_llm.py  test_main.py  test_networker.py  test_reviewer.py  test_scorer.py  test_tailor.py  test_tools.py  test_tracker.py
tests/fixtures/: test_config.yaml  test_experience.md
tools/: ats_scanner.py  browser.py  compiler.py  config_loader.py  corpus.py  llm.py  prompts.py  resume.py  schemas.py  scraper.py
tracker/: audit.py  db.py  tracker.py
